--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WanderingOatmeal</title>
-    <link rel="icon" type="image/icon" href="/images/favicon/icon.ico">
+    <link rel="icon" type="image/icon" href="/images/favicon/icon.ico?">
 </head>
 <body>
     <header>
